Fix 'support me on github link text align.

--- a/src/app/pages/welcome/welcome.component.scss
+++ b/src/app/pages/welcome/welcome.component.scss
@@ -325,7 +325,7 @@ header {
             a {
                 text-decoration: none;
                 color: var(--primary-color-dark);
-                display: flex;
+                display: inline-flex;
                 align-items: center;
                 gap: 1rem;
                 font-weight: 500;
